kubernetes/apps/network/traefik/traefik/addons/forwardAuth/deployment.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name traefik-forward-auth
  labels:
    app: *name
spec:
  replicas: 3
  selector:
    matchLabels:
      app: *name
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: *name
    spec:
      shareProcessNamespace: true
      containers:
        - name: *name
          # command:
          #   - sh
          #   - -c
          #   - sleep 8000s
          image: ghcr.io/jordemort/traefik-forward-auth:latest
          resources:
            requests:
              memory: '1Mi'
              cpu: '1m'
            limits:
              memory: '500Mi'
              cpu: '800m'
        - name: go-instrumentation-sidecart
          image: ghcr.io/open-telemetry/opentelemetry-go-instrumentation/autoinstrumentation-go:v0.23.0
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
            privileged: true
      restartPolicy: Always
status: {}
